--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,6 @@
 <resources>
     <string name="app_name">DoodlePadPro</string>
     <string name="action_settings">Settings</string>
-
-
-    <string name="start_new">New</string>
-    <string name="brush">Brush</string>
-    <string name="erase">Erase</string>
-    <string name="save">Save</string>
-    <string name="paint">Paint</string>
-
-    <string name="sml">Small</string>
-    <string name="med">Medium</string>
-    <string name="lrg">Large</string>
+    <string name="title_activity_drawing">Drawing</string>
 
 </resources>
