--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">DoodlePadPro</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_drawing">Drawing</string>
+    <string name="title_activity_add_image">AddImage</string>
 
 </resources>
